# web_module_10

./: README.md  pyproject.toml
quotes/: db_mongo.py
quotes/app_quotes/: forms.py  models.py  urls.py  views.py
quotes/app_quotes/migrations/: 0001_initial.py  0002_alter_quote_description.py  0003_authordetail.py  0004_alter_authordetail_user.py
quotes/app_quotes/templates/app_quotes/: base.html  index.html
quotes/quotes/: settings.py
quotes/users/: urls.py  views.py
quotes/users/templates/users/: password_reset_subject.txt  signin.html
