[tool.poetry]
name = "web-module-10"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_module_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
export = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
